--- a/risk.html
+++ b/risk.html
@@ -16,7 +16,7 @@
 <!-- my nav bar-->
 <div class = "menu-bar">
   <ul>
-    <li><a href="Home.html"><i class="fas fa-home"></i>Home</a></li>
+    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
     <li><a><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
