--- a/topic.html
+++ b/topic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Home</title>
-  	<link rel="stylesheet" href="newstyle.css">
+    <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
@@ -46,57 +46,46 @@
    </ul>
 </div>
 <br>
-<br>
-<br>
-
+ 
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1>Topic: Technology in Healthcare, artificial body parts and organs.</h1>
 
 <br>
 <br>
 
-<p>In general technology has had a gigantic impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been improved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However, what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
-
-<br>
+<h1>Why we chose this topic?</h1>
 <br>
 
-<p>We will be researching the future possibilities that can lie ahead for people who need artificial body parts and limbs. We want to see what new doors that could be open for this technology that is still being developed and what could we expect from this new technology.</p>
-
-<br>
-<br>
-<br>
-
-<h1>Research:</h1>
-<br>
-
-<p>The technological advances in health care are making it possible for people to have artificial body parts and organs. “The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021). However, the use of these devices raises ethical issues relating to conceptualisation, health and safety, distributive justice, and human augmentation.</p>
+<p>The importance of artificial body parts rises, as the need for transplant organs and body parts outnumber the supply of available organs. Nowadays, thanks to the advancement in technology, it is possible to produce artificial body parts. Specially made for the individuals and this gives them a second chance of living a quality life.
+</p>
 
 <br>
 <br>
 <br>
 <br>
-<br>
 
+<h1>What are artificial body parts?</h1>
+<br>
+<p>In medicine, a prosthesis or prosthetic implant is an artificial
+device that replaces a missing body part, which may be lost
+through trauma, disease, or a condition present at birth.
+</p>
 
-
-<img src="img/thealth.jpg" alt="healthcare" class="center">
-
-<br>
-<br>
-<br>
-<br>
-<br>
 <br>
 <br>
 <br>
 <br>
 
+<h1>So what is the purpose of artificial body parts and organs? </h1>
+<br>
+<p><img src="img/robotarm.jpg" alt="arm" style="float: right;">
+The purpose of artificial body parts and organs is to imitate the the movement and functionality of a real body part or limb. This allows people who have lost a body part or organ through, trauma, sickness or condition at birth to have that body part replaced.</p>
 
 
-
-
-
+<br>
+<br>
+<br>
 
 
 <footer id="footer">
@@ -107,7 +96,6 @@
 
   <script type="text/javascript" src="java.js"></script>
 </footer>
-
 </div>
 </div>
 
