--- a/opp.html
+++ b/opp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Opportunities</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -16,13 +16,14 @@
 <!-- my nav bar-->
 <div class = "menu-bar">
   <ul>
-    <li><a href="Home.html"><i class="fas fa-home"></i>Home</a></li>
+    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
     <li><a><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
+          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
-          <li><a href="choice.html">Choice</a></li>
+          <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
@@ -44,26 +45,66 @@
     </li>  
    </ul>
 </div>
+<br>
+ 
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1>What are Opportunities are there for artificial body parts and organs?</h1>
+
 <br>
 <br>
 
+<p>“The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021), so there is no telling what new doors could artificial body parts lead to.</p>
 
-<p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<br>
+<br>
+
+<h1>Appearance</h1>
+<br>
+
+<p><img src="img/naarm.jpg" alt="natural" style="float:left; width: 300px; margin-right:15px;">
+For people who receive artificial limbs to replace the certain type of limb on the area affected, sometimes they can feel embarrassed about the  bionic look of the limb due to it not looking like the "norm", though this may not affect everyone there has been efforts of trying to give bionic limbs a more natural appearance, and if this doesn’t apply to a individual they can always do their own customization that gives their arm a more unique look and feel.
+</p>
 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+<br>
+<br>
+
+<h1>Control</h1>
+<br>
+
+<p><img src="img/nerarm.jpg" alt="nervous system" style="float:right; width: 450px; height:350px ;margin-left:15px;">
+Obviously one of the main purposes of the bionic limbs is to make the prosthetic more responsive to the user’s commands. Prosthetics have been shown to be able to move, however not with the full range of motion like an actual limb. Over the years engineers have been working hard to create a system that is more responsive, has  the full range of motion like an actual limb and to make it more functional. One of the main methods of creating a more responsive prosthetic has been linking the artificial limb to the user's mind. This allows the limb  to receive commands from the central nervous system with quicker response times with less lag. This allows the limb to recreate normal movement and functionality, and instantly triggers the desired movement, creating a more fluid and natural feel for the user when using the limb.
+</p>
+
+<br>
+<br>
+
+<h1>Production</h1>
+
+<br>
+
+<p>As of right now artificial limbs are not available to all people that are missing limbs or organs, however we can expect there to be mass reproduction of artificial limbs and organs. With the advancement of technology we can expect that the mass reproduction will be cheaper to make, and will become more readily available for people that need the artificial limb or organ. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014)
+</p>
 
 
-<script type="text/javascript" src="java.js"></script> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+<footer id="footer">
+
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
+ 
 </div>
 </div>
 
