--- a/reflec.html
+++ b/reflec.html
@@ -16,13 +16,14 @@
 <!-- my nav bar-->
 <div class = "menu-bar">
   <ul>
-    <li><a href="Home.html"><i class="fas fa-home"></i>Home</a></li>
+    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
     <li><a><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
+          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
-          <li><a href="choice.html">Choice</a></li>
+          <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
@@ -44,22 +45,26 @@
     </li>  
    </ul>
 </div>
+<br>
+ 
 
 <!-- Main content -->
 <h1>CTiS: Impact of Technology in Health Care</h1>
+
 <br>
 <br>
 
+<p>Technology has had a positive impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been imporved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
 
-<p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<br>
+<br>
+
+<p>We want to see what new doors are going to be opened from bionic people and artificial body parts. We want to see what the future for bionic people and artifical body parts do for people that need them.</p>
 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+
+
+
 
 
 <script type="text/javascript" src="java.js"></script> 
