--- a/risk.html
+++ b/risk.html
@@ -49,12 +49,18 @@
  
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1>The Risks of artificial body parts and organs</h1>
 
 <br>
 <br>
 
-<p>Technology has had a positive impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been imporved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
+<br>
+<br>
+  <h1>Conceptualisation</h1>
+ <br>
+ <p>
+The use of artificial body parts allows people to view a person as a machine-like object rather than a human being. The possibility of a body part or organ being replaced, alters the perception of what the normal body status is, as it is confirming body parts are replaceable objects. This can be devaluing for a person with an artificial body part and made them to feel different than everyone else. Walker (2019) conducted a study which argues that the status of a ‘normal’ human being relies on the relationship of a body to a person, and if a prosthesis allows someone to feel human again then everyone should view artificial body parts as ordinary. “In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019). In the future, the technological advances in artificial body parts may increase a more “natural seeming experience” (Svenaeus 2010) which supports the way people with prostheses is looked at. It may also be hard for the people with artificial body parts to accept the fact that they are relying on a piece of technology to function. This may impact their behaviour and be hard for them to identify with. 
+</p>
 
 <br>
 <br>
