--- a/risk.html
+++ b/risk.html
@@ -65,7 +65,10 @@ The use of artificial body parts allows people to view a person as a machine-lik
 <br>
 <br>
 
-<p>We want to see what new doors are going to be opened from bionic people and artificial body parts. We want to see what the future for bionic people and artifical body parts do for people that need them.</p>
+<h1>Health and Safety</h1>
+ <br>
+  
+  <p>Humans functioning with an artificial organ or body part for the rest of their life can be very dangerous and unpredictable. It is a real risk as the implants may malfunction, have dangerous side effects, or are rejected by the immune system. There have been negative experiences towards breast implants and artificial hearts already with the body rejecting the technology. It is hard to risk a person’s life on a few clinical tests with humans or animals. Olsen and Kyree-Friis (2009) stated that artificial organs should be clinically tested over years or even decades with a large number of people. However, this raises ethical issues as we are creating human guinea pigs.</p>
 
 
 
