--- a/risk.html
+++ b/risk.html
@@ -76,7 +76,14 @@ The use of artificial body parts allows people to view a person as a machine-lik
 
 
 
-<script type="text/javascript" src="java.js"></script> 
+<footer id="footer">
+
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
 
 </div>
 </div>
