--- a/reflec.html
+++ b/reflec.html
@@ -65,9 +65,14 @@
 
 
 
+<footer id="footer">
 
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
 
-<script type="text/javascript" src="java.js"></script> 
+  <script type="text/javascript" src="java.js"></script>
+</footer>
 
 </div>
 </div>
