--- a/risk.html
+++ b/risk.html
@@ -70,11 +70,29 @@ The use of artificial body parts allows people to view a person as a machine-lik
   
   <p>Humans functioning with an artificial organ or body part for the rest of their life can be very dangerous and unpredictable. It is a real risk as the implants may malfunction, have dangerous side effects, or are rejected by the immune system. There have been negative experiences towards breast implants and artificial hearts already with the body rejecting the technology. It is hard to risk a person’s life on a few clinical tests with humans or animals. Olsen and Kyree-Friis (2009) stated that artificial organs should be clinically tested over years or even decades with a large number of people. However, this raises ethical issues as we are creating human guinea pigs.</p>
 
+<br>
+<br>
+  
+<h1>Price</h1>
+<br>
+ 
+<p>Another problem is the price of even doing the procedure to implement the artificial body part or organ. Since there is a possibility that the body would reject the artificial organ or body part, putting down thousands of dollars to put in the device is sometimes just a huge risk in itself for people who don’t have that financial security or stability.</p>
 
+<br>
+<br>
+  
+<h1>Distributive Justice</h1>
+<br>
+  
+<p>“The development of increasingly sophisticated prostheses and implants raises issues of distributive justice” (Brey, 2005). Will there be a cheap and expensive implant? High quality and low quality one? If someone can’t afford the artificial body part or organ, can they not get what they need? Or does everyone have a moral right for one? If only certain people are lucky enough to get the artificial organ or body part this will create a number of ethical problems for people. There are already a number of practical ethical issues such as damage to an artificial limb isn’t treated the same and as fair as to bodily damage. If someone else was to break an artificial body part, it is up to the owner to pay for it. Also, when someone with a prosthetic is incarcerated, it is usually taken off them as it is seen as a weapon. This limits the movement and leaves them at a disadvantage in prison. 
+</p>
 
-
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <footer id="footer">
 
