--- a/risk.html
+++ b/risk.html
@@ -81,6 +81,14 @@ The use of artificial body parts allows people to view a person as a machine-lik
 <br>
 <br>
   
+ <h1>Security</h1>
+ <br> 
+  
+  <p>Bionic hands are being 3D printed with plastic, metal and composites . The arms can be manufactured to contain a range of smart features. The smart features can include inbuilt display, an NFC chip which allows for contactless payments, functions like a smart watch and a GSM module. All these features require access to the cloud, and since it needs to access the cloud this makes the bionic arms susceptible to security issues more precisely people hacking into the arm. This has paved the way for potential attacks against prosthetic users.</p>
+ 
+ <br>
+ <br>
+
 <h1>Distributive Justice</h1>
 <br>
   
@@ -89,8 +97,12 @@ The use of artificial body parts allows people to view a person as a machine-lik
 
 <br>
 <br>
+  
+<h1>Human AUgmentation</h1>
 <br>
-<br>
+ <p>Human augmentation is the physical or mental enhancement of the human body to perform better. This raises questions which could impact human life in the future. What if technology reaches a point when artificial body parts or limbs perform a lot better than how our body naturally is? This would make everyone want to be artificial and will create bionic people. How far could this go? “If certain augmentations get very popular, there is also a risk that they will become accepted as the norm, and people without one will be seen as cripples” (Brey 2005).
+</p>
+  
 <br>
 <br>
 
