--- a/risk.html
+++ b/risk.html
@@ -92,7 +92,7 @@ The use of artificial body parts allows people to view a person as a machine-lik
 <h1>Distributive Justice</h1>
 <br>
   
-<p><img src="img/10.jpg" style="float:left; margin-left:20px; width:300px; height:300px;">“The development of increasingly sophisticated prostheses and implants raises issues of distributive justice” (Brey, 2005). Will there be a cheap and expensive implant? High quality and low quality one? If someone can’t afford the artificial body part or organ, can they not get what they need? Or does everyone have a moral right for one? If only certain people are lucky enough to get the artificial organ or body part this will create a number of ethical problems for people. There are already a number of practical ethical issues such as damage to an artificial limb isn’t treated the same and as fair as to bodily damage. If someone else was to break an artificial body part, it is up to the owner to pay for it. Also, when someone with a prosthetic is incarcerated, it is usually taken off them as it is seen as a weapon. This limits the movement and leaves them at a disadvantage in prison. 
+<p><img src="img/10.jpg" style="float:left; margin-right:20px; width:300px; height:300px;">“The development of increasingly sophisticated prostheses and implants raises issues of distributive justice” (Brey, 2005). Will there be a cheap and expensive implant? High quality and low quality one? If someone can’t afford the artificial body part or organ, can they not get what they need? Or does everyone have a moral right for one? If only certain people are lucky enough to get the artificial organ or body part this will create a number of ethical problems for people. There are already a number of practical ethical issues such as damage to an artificial limb isn’t treated the same and as fair as to bodily damage. If someone else was to break an artificial body part, it is up to the owner to pay for it. Also, when someone with a prosthetic is incarcerated, it is usually taken off them as it is seen as a weapon. This limits the movement and leaves them at a disadvantage in prison. 
 </p>
 
 <br>
@@ -100,7 +100,7 @@ The use of artificial body parts allows people to view a person as a machine-lik
   
 <h1>Human Augmentation</h1>
 <br>
- <p><img src="img/aug.jpg" style="float:right; margin-right:15px; width: 300px; height: 300px;">
+ <p><img src="img/aug.jpg" style="float:right; margin-left:15px; width: 300px; height: 300px;">
    Human augmentation is the physical or mental enhancement of the human body to perform better. This raises questions which could impact human life in the future. What if technology reaches a point when artificial body parts or limbs perform a lot better than how our body naturally is? This would make everyone want to be artificial and will create bionic people. How far could this go? “If certain augmentations get very popular, there is also a risk that they will become accepted as the norm, and people without one will be seen as cripples” (Brey 2005).
 </p>
   
