--- a/topic.html
+++ b/topic.html
@@ -79,11 +79,17 @@ through trauma, disease, or a condition present at birth.
 
 <h1>So what is the purpose of artificial body parts and organs? </h1>
 <br>
-<p><img src="img/robotarm.jpg" alt="arm" style="float: right;">
+<p><img src="img/robotarm.jpg" alt="arm" style="float: right; margin-left: 15px;">
 The purpose of artificial body parts and organs is to imitate the the movement and functionality of a real body part or limb. This allows people who have lost a body part or organ through, trauma, sickness or condition at birth to have that body part replaced.</p>
 
 
 <br>
+<br>
+<br>
+  <br>
+<br>
+<br>
+  <br>
 <br>
 <br>
 
