--- a/risk.html
+++ b/risk.html
@@ -84,7 +84,7 @@ The use of artificial body parts allows people to view a person as a machine-lik
  <h1>Security</h1>
  <br> 
   
-  <p>Bionic hands are being 3D printed with plastic, metal and composites . The arms can be manufactured to contain a range of smart features. The smart features can include inbuilt display, an NFC chip which allows for contactless payments, functions like a smart watch and a GSM module. All these features require access to the cloud, and since it needs to access the cloud this makes the bionic arms susceptible to security issues more precisely people hacking into the arm. This has paved the way for potential attacks against prosthetic users.</p>
+  <p><img src="img/cybsec.jpg" alt="security" style="float:right; margin-left:15px; width:300px; height:300px;">Bionic hands are being 3D printed with plastic, metal and composites . The arms can be manufactured to contain a range of smart features. The smart features can include inbuilt display, an NFC chip which allows for contactless payments, functions like a smart watch and a GSM module. All these features require access to the cloud, and since it needs to access the cloud this makes the bionic arms susceptible to security issues more precisely people hacking into the arm. This has paved the way for potential attacks against prosthetic users.</p>
  
  <br>
  <br>
