--- a/opp.html
+++ b/opp.html
@@ -38,8 +38,8 @@
     <li><a><i class="fas fa-info-circle"></i>About</a>
       <div class = "sub-menu-1">
         <ul>
-          <li><a href="opp.html">References</a></li>
-          <li><a href="risk.html">Process Support</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="process.html">Process Support</a></li>
         </ul>
       </div>
     </li>  
