--- a/process.html
+++ b/process.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Process</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -38,8 +38,8 @@
     <li><a><i class="fas fa-info-circle"></i>About</a>
       <div class = "sub-menu-1">
         <ul>
-          <li><a href="opp.html">References</a></li>
-          <li><a href="risk.html">Process Support</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="process.html">Process Support</a></li>
         </ul>
       </div>
     </li>  
