--- a/choices.html
+++ b/choices.html
@@ -49,22 +49,41 @@
  
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1>Choices</h1>
 
 <br>
 <br>
 
-<p>Technology has had a positive impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been imporved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
+  <h1>Improving security </h1>
+  <br>
+<p>Improving the security of a bionic limb or artificial organ is a top priority in improving the device. Due to bionic limbs gaining access to the cloud, cyber attacks on bionic limbs or organs can become more prevalent. "It is now of crucial importance for the developers of such technologies to collaborate with cybersecurity solution vendors. That will allow us to make even theoretical cases of attacks on the human body impossible." (Chekh, 2019). If developers of such technology team up with cybersecurity solution vendors, then cyber attacks on people with artificial limbs and organs will become an extremely rare occurrence, and in the long run this will allow people who rely on this technology to feel safe knowing that the security of their artificial body or limb is well developed an robust preventing any external attacks.
+</p>
 
 <br>
 <br>
 
-<p>We want to see what new doors are going to be opened from bionic people and artificial body parts. We want to see what the future for bionic people and artifical body parts do for people that need them.</p>
+ <h1>Improving Performance</h1
+  <br>
+<p>Bionic limbs still have a long way to go before they achieve the full range of motion, control and sensitivity of ‘biological’ limbs, so one of the main goals for the future of prosthetics or prosthesis is to improve the overall performance of the device. In doing so, developers can create bionic limbs that can be equal to biological limbs, this will help people who have lost limbs through trauma, illness, or a condition at birth feel what it is like to have a biological limb. 
+</p>
+
+   <br>
+   <br>
+   
+   <h1>What can be expected in the future?</h1>
+ <br>
+ 
+   <p>Prosthesis will play an important role in the future technological and medical industry, as it is only a substitute for body parts and it has its own advantages (Mass production, customized for individual purposes). “The next five to ten years could bring in phenomenal advancement."(Michael McLoughlin, 2014) if the mass reproduction of this technology can become available for the public then people with missing limbs or need replacement for their organ can feel relieved that they don’t need to wait for a long time for a donor of the particular organ they need, this will also help with lower the price of the artificial organs and limbs due to their being a bigger supply of available transplant organs or limbs. 
+</p>
 
 
-
-
-
+  <br>
+   <br>
+     <br>
+   <br>
+     <br>
+   <br>  <br>
+   <br>
 
 
 <script type="text/javascript" src="java.js"></script> 
