--- a/choices.html
+++ b/choices.html
@@ -62,7 +62,7 @@
 <br>
 <br>
 
- <h1>Improving Performance</h1
+  <h1>Improving Performance</h1>
   <br>
 <p>Bionic limbs still have a long way to go before they achieve the full range of motion, control and sensitivity of ‘biological’ limbs, so one of the main goals for the future of prosthetics or prosthesis is to improve the overall performance of the device. In doing so, developers can create bionic limbs that can be equal to biological limbs, this will help people who have lost limbs through trauma, illness, or a condition at birth feel what it is like to have a biological limb. 
 </p>
