--- a/choices.html
+++ b/choices.html
@@ -75,6 +75,9 @@
  
    <p>Prosthesis will play an important role in the future technological and medical industry, as it is only a substitute for body parts and it has its own advantages (Mass production, customized for individual purposes). “The next five to ten years could bring in phenomenal advancement."(Michael McLoughlin, 2014) if the mass reproduction of this technology can become available for the public then people with missing limbs or need replacement for their organ can feel relieved that they don’t need to wait for a long time for a donor of the particular organ they need, this will also help with lower the price of the artificial organs and limbs due to their being a bigger supply of available transplant organs or limbs. 
 </p>
+  <br>
+  <p>It is also safe to say that when viewing prostheses we can approach it as a body rather than a object.“In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019), this will help with the problem of people viewing another person who uses a prosthetic or prosthesis as an object rather than an actual human being
+</p>
 
 
   <br>
