--- a/choices.html
+++ b/choices.html
@@ -88,8 +88,14 @@
    <br>  <br>
    <br>
 
+<footer id="footer">
 
-<script type="text/javascript" src="java.js"></script> 
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
 
 </div>
 </div>
