--- a/opp.html
+++ b/opp.html
@@ -90,7 +90,10 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
 <br>
 <br>
+  <h1>Helping the elderly</h1>
 <br>
+  <p>Elderly people face many challenges when it comes to their motor skills, cognitive abilities and their senses. Due to their old age their motor skills can deteriorate making everyday tasks challenging for them, while their cognitive abilities get worse due to illnesses like alzeihmers that affects their memory, and even their senses worsen like their vision or hearing due to the deterioration of their body. The technology to help the elderely is already out there and still being improved on. Though there may still not be an artificial brain that can be implanted, there is promising work of a “pacemaker” type device for the brain; it has shown that it can enhance the memory in some epilepsy patients(Baeker 2019), this device can also help in patients with alzeihmers, due to the illness causing memory loss, confusion, the inability to learn new things and a lot of other symptoms that doesn’t allow for the patient to be able to process things properly, this artificial brain can help in lessening the effects of these symptoms or even negate the effects entirely. Not only is there an artificial brain being developed, there is the artificial retina. The artificial retina can be used for people who have lost their vision or for people who are losing their vision, this can help a lot of people who are starting to develop visual impairments.</p> 
+
 <br>
 <br>
 <br>
