--- a/opp.html
+++ b/opp.html
@@ -84,8 +84,7 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
 <br>
 
-<p>As of right now artificial limbs are not available to all people that are missing limbs or organs, however we can expect there to be mass reproduction of artificial limbs and organs. With the advancement of technology we can expect that the mass reproduction will be cheaper to make, and will become more readily available for people that need the artificial limb or organ. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014)
-</p>
+<p>As of right now artificial limbs are not available to people who are in need of prostheses, however we can expect there to be mass reproduction of artificial body parts. With the advancement of technology we can expect that mass reproduction will make the development cheaper to make, and will become readily available for people that need these artificial body parts. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014). Another benefit of mass reproducing this technology is that the demand for transplant organs and limbs will be met, this will allow for shorter waiting times for people who need transplant organs, this will cause less stress for the patient and for their family. </p>
 
 
 <br>
