--- a/reflec.html
+++ b/reflec.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Ethical Reflections</title>
+  <title>Home</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -46,21 +46,51 @@
    </ul>
 </div>
 <br>
+<br>
+
  
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1>Ethical Reflections</h1>
 
+
+
+<table>
+  <tr>
+    <th>Student Name</th>
+    <th>Student ID</th>
+    <th>Reflection</th>
+  </tr>
+  <tr>
+    <td>Brooklyn Lam</td>
+    <td>180245473</td>
+    <td><a href="brook.html"> link</a></td>
+  </tr>
+  <tr>
+    <td>Vincent Kong</td>
+    <td>20112750</td>
+    <td><a href="vincent.html">Link</a></td>
+  </tr>
+  <tr>
+    <td>Jin Hyuck Kim</td>
+    <td>18026228</td>
+    <td><a href="brendon.html">Link</a></td>  </tr>
+</table>
+
+
+
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
 <br>
-<br>
-
-<p>Technology has had a positive impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been imporved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
-
-<br>
-<br>
-
-<p>We want to see what new doors are going to be opened from bionic people and artificial body parts. We want to see what the future for bionic people and artifical body parts do for people that need them.</p>
-
 
 
 
