--- a/reflec.html
+++ b/reflec.html
@@ -64,7 +64,7 @@
   <tr>
     <td>Brooklyn Lam</td>
     <td>180245473</td>
-    <td><a href="brook.html"> link</a></td>
+    <td><a href="brook.html"> Link</a></td>
   </tr>
   <tr>
     <td>Vincent Kong</td>
