--- a/opp.html
+++ b/opp.html
@@ -95,8 +95,14 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
 <br>
 <br>
+  <h1>Replacing and Improving</h1>
 <br>
+  <p>One of the main purposes for artificial body parts is to replace the area that has a missing body part or to improve the functionality of the body part. A good example of an implant that improves the functionality of a body part or organ is the pacemaker.  The first clinically successful pacemaker was invented in 1960. The pacemaker is implanted into the heart, and the small computer that is in the pacemaker helps regulate abnormal heartbeat, however pacemakers are still categorized under artificial body parts, while the artificial organ is the artificial heart. Artificial hearts are a good example of an artificial organ fully replacing a biological organ. Artificial hearts should not be mistaken for pacemakers, one regulates abnormal heartbeat, while the other fully replaces the heart itself. Artificial hearts are utilized when there is total heart failure or when someone is on the waiting list for a heart transplant. </p>
 <br>
+  <br>
+  <br>
+  <br>
+  <br>
 
 <footer id="footer">
 
