--- a/opp.html
+++ b/opp.html
@@ -49,7 +49,7 @@
  
 
 <!-- Main content -->
-<h1>What Opportunities are there for artificial body parts and organs?</h1>
+  <h1><div class="center>"What Opportunities are there for artificial body parts and organs?</div></h1>
 
 <br>
 <br>
