--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Home</title>
-  	<link rel="stylesheet" href="newstyle.css">
+    <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -64,10 +63,6 @@
 <p>We will be researching the future possibilities that can lie ahead for people who need artificial body parts and limbs. We want to see what new doors that could be open for this technology that is still being developed and what could we expect from this new technology.</p>
 
 <br>
-<br>
-<br>
-
-<h1>Research:</h1>
 <br>
 
 <p>The technological advances in health care are making it possible for people to have artificial body parts and organs. “The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021). However, the use of these devices raises ethical issues relating to conceptualisation, health and safety, distributive justice, and human augmentation.</p>
