--- a/choices.html
+++ b/choices.html
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -49,8 +48,10 @@
  
 
 <!-- Main content -->
-<h1>Choices</h1>
+<h1><div class="t-center">Choices</div></h1>
 
+<br>
+<br>
 <br>
 <br>
 
@@ -61,6 +62,8 @@
 
 <br>
 <br>
+<br>
+<br>
 
   <h1>Improving Performance</h1>
   <br>
@@ -69,6 +72,8 @@
 
    <br>
    <br>
+   <br>
+<br>
    
    <h1>What can be expected in the future?</h1>
  <br>
