--- a/references.html
+++ b/references.html
@@ -16,17 +16,19 @@
 <!-- my nav bar-->
 <div class = "menu-bar">
   <ul>
+   <div class = "menu-bar">
+  <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
+
 
     <li><a><i class="fas fa-balance-scale"></i>Ethical</a>
      <div class = "sub-menu-1">
