--- a/reflec.html
+++ b/reflec.html
@@ -17,16 +17,16 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
+
 
     <li><a><i class="fas fa-balance-scale"></i>Ethical</a>
      <div class = "sub-menu-1">
@@ -64,7 +64,7 @@
   <tr>
     <td>Brooklyn Lam</td>
     <td>180245473</td>
-    <td><a href="brook.html"> Link</a></td>
+    <td><a href="brook.html"> link</a></td>
   </tr>
   <tr>
     <td>Vincent Kong</td>
