--- a/opp.html
+++ b/opp.html
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -46,16 +45,17 @@
    </ul>
 </div>
 <br>
- 
+<br>
 
 <!-- Main content -->
-  <h1><div class="center>"What Opportunities are there for artificial body parts and organs?</div></h1>
+  <h1><div class="t-center">What Opportunities are there for artificial body parts and organs?</div></h1>
 
 <br>
 <br>
 
 <p>“The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021), so there is no telling what new doors could artificial body parts lead to.</p>
 
+<br>
 <br>
 <br>
 
@@ -69,6 +69,8 @@ For people who receive artificial limbs to replace the certain type of limb on t
 
 <br>
 <br>
+<br>
+<br>
 
 <h1>Control</h1>
 <br>
@@ -79,6 +81,8 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
 <br>
 <br>
+<br>
+<br>
 
 <h1>Production</h1>
 
@@ -86,15 +90,20 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
 <p>As of right now artificial limbs are not available to people who are in need of prostheses, however we can expect there to be mass reproduction of artificial body parts. With the advancement of technology we can expect that mass reproduction will make the development cheaper to make, and will become readily available for people that need these artificial body parts. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014). Another benefit of mass reproducing this technology is that the demand for transplant organs and limbs will be met, this will allow for shorter waiting times for people who need transplant organs, this will cause less stress for the patient and for their family. </p>
 
+<br>
+<br>
+<br>
+<br>
 
-<br>
-<br>
   <h1>Helping the elderly</h1>
 <br>
   <p>Elderly people face many challenges when it comes to their motor skills, cognitive abilities and their senses. Due to their old age their motor skills can deteriorate making everyday tasks challenging for them, while their cognitive abilities get worse due to illnesses like alzeihmers that affects their memory, and even their senses worsen like their vision or hearing due to the deterioration of their retina or cochlea. The technology to help the elderely is already out there and still being improved on. Though there may still not be an artificial brain that can be implanted, there is promising work of a “pacemaker” type device for the brain; it has shown that it can enhance the memory in some epilepsy patients(Baeker 2019), this device can also help in patients with alzeihmers, due to the illness causing memory loss, confusion, the inability to learn new things and a lot of other symptoms that doesn’t allow for the patient to be able to process things properly, this artificial brain can help in lessening the effects of these symptoms or even negate the effects entirely. Not only is there an artificial brain being developed, there is the artificial retina. The artificial retina can be used for people who have lost their vision or for people who are losing their vision, this can help a lot of people who are starting to develop visual impairments.</p> 
 
 <br>
 <br>
+<br>
+<br>
+
   <h1>Replacing and Improving</h1>
 <br>
   <p>One of the main purposes for artificial body parts is to replace the area that has a missing body part or to improve the functionality of the body part. A good example of an implant that improves the functionality of a body part or organ is the pacemaker.  The first clinically successful pacemaker was invented in 1960. The pacemaker is implanted into the heart, and the small computer that is in the pacemaker helps regulate abnormal heartbeat, however pacemakers are still categorized under artificial body parts, while the artificial organ is the artificial heart. Artificial hearts are a good example of an artificial organ fully replacing a biological organ. Artificial hearts should not be mistaken for pacemakers, one regulates abnormal heartbeat, while the other fully replaces the heart itself. Artificial hearts are utilized when there is total heart failure or when someone is on the waiting list for a heart transplant. </p>
