--- a/vincent.html
+++ b/vincent.html
@@ -17,16 +17,16 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
-          <li><a href="opp.html">Opportunites</a></l>
+          <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
+
 
     <li><a><i class="fas fa-balance-scale"></i>Ethical</a>
      <div class = "sub-menu-1">
@@ -79,12 +79,18 @@ The final risk that I am most worried about is human augmentation, the reason wh
 
 Though there are many negatives, I still believe that the positives still outweigh the negatives. The problems that may arise from artificial body parts and organs can be easily avoided by educating ourselves on what artificial body parts and organs are, and how we could treat people with them. With this in mind I believe if we are able to educate ourselves, we can focus more on the improvement of this technology and improving the quality of life for handicap people and the elderly
 
+
+
 </p>
 
 </div>
 
+
  <br><br>
  <br><br>
+
+
+
 
 
 <footer id="footer">
