--- a/brook.html
+++ b/brook.html
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -67,10 +66,18 @@ Although it is unethical for people to objectify people with prosthetics, withou
 
 The positives of artificial body parts and organs outweigh the negatives. The ethical issues surrounding this topic can be easily removed with a little change to the way we think and act. I believe the potential of using artificial body parts and organs in medical care has the potentially to help change lives of the unfortunate and in certain circumstances save lives.
 
+
 </p>
- </div>
-  
+
+</div>
+
+
  <br><br>
+
+
+
+
+
 
 <footer id="footer">
 
